--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "swagger-jsdoc": "^6.1.0",
