--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
